Issue IMCMS-737 Add visibility info in the menu editor: - Add visibility column in the menu editor

--- a/src/main/webapp/imcms/css/document_editor/imcms-document-editor.css
+++ b/src/main/webapp/imcms/css/document_editor/imcms-document-editor.css
@@ -139,7 +139,6 @@
     text-overflow: ellipsis;
     overflow: inherit;
     font-weight: normal;
-	min-width: 50px;
 }
 
 .imcms-document-item__controls {
