--- a/src/main/webapp/imcms/css/grid/imcms-grid.css
+++ b/src/main/webapp/imcms/css/grid/imcms-grid.css
@@ -32,7 +32,10 @@
 .imcms-grid-col-15,
 .imcms-grid-col-16,
 .imcms-grid-col-17,
-.imcms-grid-col-18 {
+.imcms-grid-col-18,
+.imcms-grid-col-19,
+.imcms-grid-col-20,
+.imcms-grid-col-21{
     float: left;
 }
 
@@ -49,7 +52,7 @@
 .imcms-document-list-titles__title--col-3,
 .imcms-document-item__info--col-3,
 .imcms-grid-col-3 {
-    width: 25%;
+    width: 19%;
 }
 
 .imcms-document-editor-head-tools__tool--grid-col-4,
@@ -117,4 +120,20 @@
 
 .imcms-grid-col-18 {
     width: 5%;
+}
+
+.imcms-grid-col-19 {
+    width: 5%;
+}
+
+.imcms-grid-col-20 {
+    width: 6%;
+}
+
+.imcms-grid-col-21 {
+    width: 15%;
+}
+
+.imcms-grid-col-22{
+    width: 22%;
 }
