--- a/src/main/webapp/imcms/css/menu_editor/imcms-menu_item.css
+++ b/src/main/webapp/imcms/css/menu_editor/imcms-menu_item.css
@@ -1,5 +1,5 @@
 .imcms-menu-items .imcms-menu-item {
-	padding-right: 88px;
+	padding-right: 81px;
 }
 
 .imcms-document-item__sort-order input {
